--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  margin: 10% 30%;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.5);
+  border-radius: 13px;
+  min-width: 418px;
 }
 
 .App-logo {
@@ -14,7 +18,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
